# peloterm

./: README.md  build.py  dev.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
frontend/: README.md  dev.py  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: AllMetricsChart.vue  ControlButtons.vue  MetricCard.vue  MetricsPanel.vue  PelotermPanel.vue  StravaUploadDialog.vue  TimeWidget.vue
frontend/src/components/__tests__/: MetricCard.spec.ts
frontend/src/composables/: useConfig.ts  useWebSocket.ts
peloterm/: cli.py  config.py  controller.py  data_processor.py  data_recorder.py  display.py  monitor.py  scanner.py  trainer.py
peloterm/devices/: __init__.py  base.py  ftms_parsers.py  heart_rate.py  mock.py  speed_cadence.py  trainer.py
peloterm/web/: __init__.py  mock_data.py  server.py
peloterm/web/static/: index.html
peloterm/web/static/assets/: index-8MhD4s0M.js  index-BJAKvj_B.js  index-CIRAcHJU.js  index-DHlo9W3t.css  index-DIgoRL3Q.css
tests/: test_config.py  test_controller.py  test_data_recorder.py  test_devices.py  test_display.py  test_web_server.py
